Start Card Layout
Set up first part of card layout using hard coded content. Use flexbox
for internal card structure.

--- a/public/style.css
+++ b/public/style.css
@@ -47,4 +47,14 @@ button {
 .card {
   background-color: lightblue;
   width: 550px;
+  display: flex;
+}
+
+.card__image {
+  width: 126px;
+  height: 168px;
+}
+
+.location {
+  flex-basis: 100%;
 }
